# conan-model

./: CMakeLists.txt  README.md
cmake/: script_clang-format.cmake  script_clang-tidy.cmake  script_cmake-format.cmake  script_code-coverage.cmake  script_options.cmake
include/model/: model.hpp  version.hpp
include/model/logging/: logger.hpp
include/model/utility/: app_args.hpp  server_logger.hpp
install/: configure_conan_for_windows.bat  download_manually_project_prerequisites.sh  install_extra_prerequisites_for_MSYS2-UCRT64.sh  install_prerequisites_for_MSYS2.sh
src/: CMakeLists.txt  main.cpp
src/logging/: CMakeLists.txt  logger.cpp
src/utility/: CMakeLists.txt  app_args.cpp
test/: CMakeLists.txt
